feat: migrate to Artifact Registry for Docker images

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,22 +4,22 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'us-docker.pkg.dev/${PROJECT_ID}/code-companion/backend:${COMMIT_SHA}'
+      - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:${COMMIT_SHA}'
       - '-t'
-      - 'us-docker.pkg.dev/${PROJECT_ID}/code-companion/backend:latest'
+      - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:latest'
       - '.'
 
   # Push the image with commit SHA tag
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'us-docker.pkg.dev/${PROJECT_ID}/code-companion/backend:${COMMIT_SHA}'
+      - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:${COMMIT_SHA}'
 
   # Push the image with latest tag
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'us-docker.pkg.dev/${PROJECT_ID}/code-companion/backend:latest'
+      - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:latest'
 
   # Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -29,16 +29,16 @@ steps:
       - 'deploy'
       - 'code-companion-backend'
       - '--image'
-      - 'us-docker.pkg.dev/${PROJECT_ID}/code-companion/backend:${COMMIT_SHA}'
+      - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:${COMMIT_SHA}'
       - '--region'
-      - 'us-central1'
+      - 'asia-southeast1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
 
 images:
-  - 'us-docker.pkg.dev/${PROJECT_ID}/code-companion/backend:${COMMIT_SHA}'
-  - 'us-docker.pkg.dev/${PROJECT_ID}/code-companion/backend:latest'
+  - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:${COMMIT_SHA}'
+  - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:latest'
 
 options:
   logging: CLOUD_LOGGING_ONLY
