--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,7 +21,7 @@ steps:
       - 'push'
       - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:latest'
 
-  # Deploy to Cloud Run
+  # Deploy to Cloud Run with environment variables from Secret Manager
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
@@ -35,6 +35,10 @@ steps:
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--set-env-vars'
+      - 'NODE_ENV=production,PORT=8080'
+      - '--set-secrets'
+      - 'MONGODB_URI=MONGODB_URI:latest,GOOGLE_AI_API_KEY=GOOGLE_AI_API_KEY:latest,GITHUB_TOKEN=GITHUB_TOKEN:latest,FRONTEND_URL=FRONTEND_URL:latest'
 
 images:
   - 'asia-southeast1-docker.pkg.dev/${PROJECT_ID}/code-companion-backend/backend:${COMMIT_SHA}'
