--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -36,7 +36,7 @@ steps:
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
-      - 'NODE_ENV=production,PORT=8080'
+      - 'NODE_ENV=production'
       - '--set-secrets'
       - 'MONGODB_URI=MONGODB_URI:latest,GOOGLE_AI_API_KEY=GOOGLE_AI_API_KEY:latest,GITHUB_TOKEN=GITHUB_TOKEN:latest,FRONTEND_URL=FRONTEND_URL:latest'
 
