--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
         "eslint": "^9.17.0",
         "tsx": "^4.19.2",
         "typescript": "^5.7.3"
+    },
+    "overrides": {
+        "ignore": "7.0.5"
     }
 }
