--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Cloud Run
+name: Deploy Backend to Cloud Run
 
 on:
   push:
@@ -23,12 +23,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Authentication via Workload Identity Federation (Recommended)
-      # If using Service Account Key, replace this step with:
-      # - id: auth
-      #   uses: google-github-actions/auth@v2
-      #   with:
-      #     credentials_json: ${{ secrets.GCP_SA_KEY }}
       - id: auth
         uses: google-github-actions/auth@v2
         with:
@@ -39,16 +33,15 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2
 
       - name: Authorize Docker
-        run: |
-          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev
+        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev
 
       - name: Build and Push Container
         run: |
-          DOCKER_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.AR_REPO }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
-          DOCKER_LATEST="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.AR_REPO }}/${{ env.IMAGE_NAME }}:latest"
-          docker build -t "$DOCKER_TAG" -t "$DOCKER_LATEST" .
-          docker push "$DOCKER_TAG"
-          docker push "$DOCKER_LATEST"
+          TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.AR_REPO }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
+          LATEST="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.AR_REPO }}/${{ env.IMAGE_NAME }}:latest"
+          docker build -t "$TAG" -t "$LATEST" .
+          docker push "$TAG"
+          docker push "$LATEST"
 
       - name: Deploy to Cloud Run
         id: deploy
@@ -61,6 +54,3 @@ jobs:
             --allow-unauthenticated
             --set-env-vars=NODE_ENV=production
             --set-secrets=MONGODB_URI=MONGODB_URI:latest,GOOGLE_AI_API_KEY=GOOGLE_AI_API_KEY:latest,GITHUB_TOKEN=GITHUB_TOKEN:latest,FRONTEND_URL=FRONTEND_URL:latest
-
-      - name: Show Output
-        run: echo ${{ steps.deploy.outputs.url }}
